REGRESSION(r244635): [GTK] Wrong background color used in non-dark mode https://bugs.webkit.org/show_bug.cgi?id=197276

Reviewed by Michael Catanzaro.

Since r244635, we are now getting the frame view background color from the theme. That's correct for dark mode,
but in non-dark mode we still want to use white backgrounds by default. This made a lot of tests to fail.

* css/CSSValueKeywords.in: Add -webkit-control-background when HAVE(OS_DARK_MODE_SUPPORT).
* css/html.css: Use -webkit-control-background instead of -apple-system-control-background.
* page/FrameView.cpp:
(WebCore::FrameView::updateBackgroundRecursively): Use CSSValueWindow instead of CSSValueWindowframe.
* rendering/RenderThemeGtk.cpp:
(WebCore::RenderThemeGtk::systemColor const): Only get the window background from the theme in dark mode. Handle
also CSSValueWebkitControlBackground.
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::systemColor const): Handle CSSValueWebkitControlBackground when HAVE(OS_DARK_MODE_SUPPORT).

Canonical link: https://commits.webkit.org/211563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244731 268f45cc-cd09-0410-ab3c-d52691b4dbfc